# RPA-Ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  pyproject.toml
ai_rpa_system/: PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  __init__.py  automation_engine.py  cli.py  demo.py  exceptions.py  executor.py  models.py  prompt_parser.py  requirements.txt  security.py  validator.py  workflow_manager.py
ai_rpa_system/docs/: API_REFERENCE.md  LLM_INTEGRATION.md  USER_GUIDE.md
ai_rpa_system/examples/: __init__.py  example_workflows.py  simple_usage.py
tests/: conftest.py  test_audit_regressions.py  test_cli.py  test_engine_security.py  test_executor.py  test_executor_features.py  test_executor_safety.py  test_imports.py  test_manager_security.py  test_models.py  test_prompt_parser.py  test_screenshot_path_security.py  test_security.py  test_validator.py  test_workflow_manager.py
