[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-rpa-system"
version = "1.0.0"
description = "An AI-driven Robotic Process Automation system for building and running desktop automation workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "AI-RPA-System Contributors", email = "you@example.com" },
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
gui = [
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ai-rpa = "ai_rpa_system.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ai_rpa_system", "ai_rpa_system.*"]

[tool.setuptools.package-data]
"ai_rpa_system" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
